// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reduce fetch config close error modal request 1`] = `
Object {
  "data": null,
  "failed": true,
  "isLoading": false,
  "showModal": false,
}
`;

exports[`should reduce fetch config failure 1`] = `
Object {
  "data": null,
  "failed": true,
  "isLoading": false,
  "showModal": true,
}
`;

exports[`should reduce fetch config request 1`] = `
Object {
  "data": null,
  "failed": false,
  "isLoading": true,
  "showModal": false,
}
`;

exports[`should reduce fetch config success 1`] = `
Object {
  "data": Object {
    "accountsUrl": "dummyAccountsUrl",
  },
  "failed": false,
  "isLoading": false,
  "showModal": false,
}
`;

exports[`should reduce to default 1`] = `Object {}`;
